Updated changes for webhook testing

--- a/static/main.css
+++ b/static/main.css
@@ -9,7 +9,7 @@ body {
   }
   
   .bg-steel {
-    background-color: #d500e0;
+    background-color: #ee0000;
   }
   
   .site-header .navbar-nav .nav-link {
